// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookmarksList date bookmarked 1`] = `
<div
  className="results"
>
  <BookmarksSortBy
    onChange={[MockFunction]}
    selectedOption="DateBookmarked"
  />
  <div
    className="results__inner-container"
  >
    <div>
      BookmarksResultList: 
      5
       hits
    </div>
  </div>
</div>
`;

exports[`BookmarksList date happened 1`] = `
<div
  className="results"
>
  <BookmarksSortBy
    onChange={[MockFunction]}
    selectedOption="DateBookmarked"
  />
  <div
    className="results__inner-container"
  >
    <div>
      BookmarksResultList: 
      4
       hits
    </div>
  </div>
</div>
`;

exports[`BookmarksList no results 1`] = `
<div
  className="results"
>
  0
  <div
    className="results__inner-container"
  >
    <div>
      BookmarksResultList: 
      0
       hits
    </div>
  </div>
</div>
`;
